fixed response box spacing

--- a/src/contact_form/ContactForm.module.css
+++ b/src/contact_form/ContactForm.module.css
@@ -130,9 +130,10 @@ input[type="submit"] {
 .responseBox {
     font-family: 'Montserrat';
     width: calc(100% - 2.5rem);
-    margin: 1rem;
     padding: 1rem;
     text-align: center;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .success {
